--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", "Arial", sans-serif;
+  font-style: normal;
   font-size: 11px;
   line-height: 16px;
   font-weight: 400;
@@ -40,4 +41,33 @@ img {
   white-space: nowrap;
   border: 0;
   clip-path: inset(100%);
+}
+
+.header__container {
+  max-width: 1366px;
+  margin: 0 auto;
+  padding: 0 40px;
+}
+
+.header__content {
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.header__title {
+  font-family: Yeseva One;
+  font-weight: normal;
+  font-size: 52px;
+  line-height: 60px;
+}
+
+.header__button {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  color: inherit;
+}
+
+.social {
+  list-style: none;
 }
