--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,6 @@ img {
 
 .header__container {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
   max-width: 1366px;
   margin: 0 auto;
@@ -103,7 +102,7 @@ img {
 
 .logo-header {
   width: 100%;
-  margin-bottom: 105px;
+  margin-bottom: 107px;
   text-align: center;
 }
 
@@ -112,22 +111,29 @@ img {
   flex-wrap: wrap;
   flex-direction: row-reverse;
   justify-content: flex-end;
-  padding-left: 40px;
+  padding-bottom: 61px;
+  padding-left: 38px;
 }
 
 .header__content {
+  max-width: 447px;
+  margin-bottom: 127px;
+  padding-left: 108px;
   font-size: 16px;
   line-height: 24px;
 }
 
 .header__city {
   margin: 0;
-  color: #A07B50;
+  margin-bottom: 19px;
+  margin-left: 2px;
+  color: #a07b50;
 }
 
 .header__title {
   margin: 0;
-  font-family: Yeseva One;
+  margin-bottom: 15px;
+  font-family: "Yeseva One", "Georgia", serif;
   font-weight: normal;
   font-size: 52px;
   line-height: 60px;
@@ -135,18 +141,75 @@ img {
 
 .header__lead {
   margin: 0;
-  color: #A07B50;
+  margin-bottom: 62px;
+  margin-left: 2px;
+  color: #a07b50;
 }
 
 .header__button {
+  width: 200px;
+  margin-left: 2px;
+  padding: 17px 35px;
+  padding-right: 42px;
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
   color: inherit;
+  border: 0.5px solid #a07b50;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.header__button:hover,
+.header__button:focus {
+  color: #a07b50;
+  border-color: #fff;
+}
+
+.header__button:active {
+  opacity: 0.5;
 }
 
 .social {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+.social::before {
+  content: "";
+  position: absolute;
+  width: 1px;
+  height: 77px;
+  left: 8px;
+  top: 268px;
+  background-color: rgba(255, 255, 255, 0.61);
+}
+
+.social__item {
+  text-align: center;
+  margin-bottom: 9px;
+}
+
+.social__item:last-child {
+  margin-bottom: 0;
+}
+
+.social__link {
+  width: 12px;
+  height: 12px;
+  cursor: pointer;
+}
+
+.social__icon:hover,
+.social__link:focus .social__icon {
+  fill: #a07b50;
+}
+
+.social__icon:active {
+  opacity: 0.5;
 }
